--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node webpack/client/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,20 +27,22 @@
     "react-redux": "^4.4.2",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
-    "redux": "^3.4.0",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
-    "koa-webpack-dev-middleware": "^1.2.0",
+    "koa-webpack-dev-middleware": "^1.2.2",
     "koa-webpack-hot-middleware": "^1.0.3",
-    "webpack": "^1.12.14"
+    "webpack": "^1.13.2"
   }
 }
