--- a/package.json
+++ b/package.json
@@ -19,28 +19,28 @@
   "homepage": "https://github.com/frontoldman/react-client-server",
   "dependencies": {
     "co": "^4.6.0",
-    "koa": "^1.2.0",
+    "koa": "^1.2.4",
     "koa-ejs": "^3.0.0",
     "koa-router": "^5.4.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.2",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.2",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.0.1"
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.3.15",
-    "babel-loader": "^6.2.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.13.0",
-    "babel-register": "^6.7.2",
-    "css-loader": "^0.23.1",
+    "babel-register": "^6.14.0",
+    "css-loader": "^0.25.0",
     "koa-webpack-dev-middleware": "^1.2.2",
     "koa-webpack-hot-middleware": "^1.0.3",
     "webpack": "^1.13.2"
